WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287443
REGRESSION(
288932@main
): [Unified PDF] Anchor links not working within document
https://bugs.webkit.org/show_bug.cgi?id=287443
Summary
REGRESSION(288932@main): [Unified PDF] Anchor links not working within document
Abrar Rahman Protyasha
Reported
2025-02-10 15:57:56 PST
rdar://143387526
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-02-10 17:17:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40381
EWS
Comment 2
2025-02-11 10:32:24 PST
Committed
290220@main
(91624f355e6b): <
https://commits.webkit.org/290220@main
> Reviewed commits have been landed. Closing PR #40381 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug