REGRESSION(288932@main): [Unified PDF] Anchor links not working within document https://bugs.webkit.org/show_bug.cgi?id=287443 rdar://143387526

Reviewed by Aditya Keerthi and Wenson Hsieh.

After 288392@main, the scrollable area for the plugin expectedly cannot
be scrolled, i.e. has (0, 0) minimum and maximum positions. Instead,
when the plugin is inflated to fit the size of the PDF content, we
should just drive all our scrolling needs through the main frame. This
patch addresses the bug in the title by:

1. Only accounting for the `ScrolledContents` coordinate space when
   the plugin is _not_ sized the fit the PDF contents.
2. Driving scroll through the main frame rather than through the
   scrollable area representing the plugin when it is sized to fit the
   PDF contents.

API test: UnifiedPDF.RespectsPageFragment

This API test does not perform anchor link following, but revealing a
page fragment goes through the same codepath, and is sufficient to
exercise the bug.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
(WebKit::UnifiedPDFPlugin::convertDown const):
(WebKit::UnifiedPDFPlugin::convertUp const):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::revealPage):
(WebKit::UnifiedPDFPlugin::scrollToPointInContentsSpace):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:
(TestWebKitAPI::UNIFIED_PDF_TEST):

Canonical link: https://commits.webkit.org/290220@main